# CPPProjectModel

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: continuous-ubuntu.yml  env_linux.sh  unit-coverage-ubuntu.yml
A/: CMakeLists.txt
A/inc/gmds/a/: A.h
A/inc/toy/a/: A.h
A/src/: A.cpp
A/tst/: ATestSuite.h  CMakeLists.txt  main_test.cpp
B/: CMakeLists.txt
B/inc/gmds/b/: B.h
B/inc/toy/b/: B.h
B/src/: B.cpp
B/tst/: BTestSuite.h  CMakeLists.txt  main_test.cpp
PY_API/: CMakeLists.txt
PY_API/src/: __init__.py  binding_A.cpp  binding_B.cpp  pyapi.cpp
PY_API/tst/: CMakeLists.txt  test_A.py  test_B.py
cmake/: project_macros.cmake
test_exe_link/: CMakeLists.txt  main.cpp
test_link/: CMakeLists.txt  main.cpp
